# agno

./: pyproject.toml
ai_design/api/: server.py
ai_design/logs/: design_log.txt
ai_design/skills/box-design/: SKILL.md
ai_design/skills/box-design/references/: arrangement-guide.md  box-catalog.md  matching-algorithm.md
ai_design/skills/box-design/scripts/: box_config.json  box_matcher.py
ai_design/skills/cost-analysis/: SKILL.md
ai_design/skills/material-design/: SKILL.md
ai_design/skills/material-design/references/: material-config-schema.md  material-formulas.md  selection-rules.md
ai_design/skills/packaging-design/: SKILL.md  SKILL_gemini.md  agent-interfaces.md  output-format.md
ai_design/skills/packaging-design/examples/: sample-requests.md
ai_design/skills/packaging-design/references/: request-form-schema.md
ai_design/skills/similarity-analysis/: SKILL.md
ai_design/skills/solution-analysis/: SKILL.md
ai_design/skills/solution-consolidation/: SKILL.md
ai_design/skills/stacking-analysis/: SKILL.md
cookbook/02_agents/05_state_and_session/: agentic_session_state.py  session_state_basic.py
cookbook/05_agent_os/: agno_assist.py  demo.py  docker-compose.yml
examples/agui/: agui_agent.py  agui_agent_with_skills.py  agui_continue_deepwiki.txt  debug_log.json  debug_log_bk.json  debug_user_log.json
examples/agui/skills/packaging-design/: SKILL.md
examples/multi_agents/: demo.py
examples/print/: print_dynamic_test.py
examples/workflow/: workflow_agent.py
libs/agno/agno/agent/: _run.py
libs/agno/agno/os/interfaces/agui/: router.py  (+1 more)
